<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/products_list"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/login_page"
            android:icon="@drawable/ic_login"
            android:title="@string/login_page" />
        <item
            android:id="@+id/signup_page"
            android:icon="@drawable/sign_up"
            android:title="@string/sign_up" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>