<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sornsophearum.pcstore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sornsophearum.pcstore.ui.gallery.ProductsFragment"
        android:label="@string/products_list"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sornsophearum.pcstore.ui.slideshow.AboutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_about" />


    <fragment
        android:id="@+id/login_page"
        android:name="com.sornsophearum.pcstore.ui.login.LoginFragment"
        android:label="@string/login_page"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/signup_page"
        android:name="com.sornsophearum.pcstore.ui.signup.SignupFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/action_settings"
        android:name="com.sornsophearum.pcstore.ui.settings.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/activity_settings" />

</navigation>